Finish login and create account

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -86,6 +86,7 @@
         style="?attr/textInputOutlinedStyle"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
+        app:endIconMode="password_toggle"
         android:layout_below="@+id/signup_TF_email">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -104,6 +105,7 @@
         style="?attr/textInputOutlinedStyle"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
+        app:endIconMode="password_toggle"
         android:layout_below="@+id/signup_TF_password">
 
         <com.google.android.material.textfield.TextInputEditText
