--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.MainActivity">
+    tools:context=".auth.LoginActivity">
 
     <ImageView
         android:id="@+id/login_IV_loginImage"
@@ -40,6 +40,7 @@
         style="?attr/textInputOutlinedStyle"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
+        app:endIconMode="password_toggle"
         android:layout_below="@+id/login_TF_email">
 
         <com.google.android.material.textfield.TextInputEditText
