--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,14 +7,32 @@
     android:layout_height="match_parent"
     tools:context=".main.HomeActivity">
 
-    <TextView
-        android:id="@+id/home_TV_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:padding="10dp"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+    <FrameLayout
+        android:id="@+id/home_frame_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/home_BN"
         />
+
+    <FrameLayout
+        android:id="@+id/home_frame_addAppointment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/home_BN"
+        />
+
+    <FrameLayout
+        android:id="@+id/home_frame_profile"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/home_BN"
+        />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/home_BN"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation_menu" />
+
 </RelativeLayout>
