finish desgin screens

--- a/app/src/main/res/layout/activity_closer_appointment.xml
+++ b/app/src/main/res/layout/activity_closer_appointment.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.HomeFragment">
+    android:padding="10dp"
+    tools:context=".main.CloserAppointmentActivity">
 
     <TextView
-        android:id="@+id/fHome_TV_name"
+        android:id="@+id/closerAppointments_TV_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="List of appointments"
         android:textColor="@color/black"
-        android:textSize="32sp"
         android:textStyle="bold"
-        android:layout_margin="10dp"
-        android:text="Hello Raghda,"
+        android:textSize="24sp"
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fHome_RV_appointments"
+        android:id="@+id/closerAppointments_RV_appointments"
+        android:layout_below="@+id/closerAppointments_TV_title"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/fHome_TV_name"
-        />
 
+        />
 </RelativeLayout>
