--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
         android:textSize="32sp"
         android:textStyle="bold"
         android:layout_margin="10dp"
-        android:text="Hello Raghda,"
+        android:text="Loading..."
         />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -22,5 +22,25 @@
         android:layout_height="match_parent"
         android:layout_below="@id/fHome_TV_name"
         />
+
+    <LinearLayout
+        android:id="@+id/fHome_LL_empty"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/empty"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="No Appointments found"
+            />
+    </LinearLayout>
 
 </RelativeLayout>
